--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
-sonar.projectKey=magasinudes.hello-world.java
-sonar.projectName=Hello World Java
+sonar.projectKey=magasinudes.resources-microservice.java
+sonar.projectName=resources-microservice
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/magasinudes/hello-world-java
-sonar.links.ci=https://travis-ci.com/magasinudes/hello-world-java
-sonar.links.scm=https://github.com/magasinudes/hello-world-java
+sonar.links.homepage=https://github.com/magasinudes/resources-microservice
+sonar.links.ci=https://travis-ci.com/magasinudes/resources-microservice
+sonar.links.scm=https://github.com/magasinudes/resources-microservice
 
 # =====================================================
 #   Properties that will be shared amongst all modules
