--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
 spring.datasource.password= password
 
+server.port=5002
+
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.show_sql= true
 spring.jpa.properties.hibernate.format_sql= true
@@ -10,4 +12,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
