--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
-spring.datasource.password= password
+spring.datasource.password= docker
 
 server.port=5002
 
